# Adafruit-9DOF-Raspberry-Pi

./: CMakeLists.txt  README.md  client.cpp  main.cpp  server.cpp
opengl/: CMakeLists.txt
opengl/includes/learnopengl/: camera.h  model.h  text.h
opengl/resources/objects/ACES/: test.mtl
opengl/resources/objects/TargetSatelliteModel/: TargetSatellite.STL  TargetSatellite.mtl  targetsatellite.wrl
opengl/resources/objects/models/: Sat_print.STL  galileo_red.stl  galileo_small.stl  modified.stl  rod.stl  small.stl  test_small.stl
opengl/src/: render.cpp  render.h
resources/models/: 1panel.stl  FullSat.dae  rot.stl  test.mtl  test.stl
resources/models/TargetSatelliteModel/: TargetSatellite.SLDPRT
resources/models/box/: box.mtl
resources/shaders/: 1.model_loading.fs  1.model_loading.vs
rpi_exe/: driverEx
src/: ADAFRUIT_9DOF.cpp  ADAFRUIT_9DOF.h  CMakeLists.txt  L3GD20.cpp  L3GD20.h  LSM303.cpp  LSM303.h  MadgwickAHRS.c  MadgwickAHRS.h  kalman.h  main.cpp  output.txt  test  test.cpp
